--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <div class="search-container">
         <div class="search-box">
             <input type="text" id="cityInput" placeholder="Enter City">
-            <button onclick="searchCity()">Search</button>
+            <button onclick="searchWeather()">Search</button>
         </div>
     </div>
-    
+    <div id="weatherData" class="weather-data"></div>
+        </div>
+    </div>
+
     
     <script src="script.js"></script>
 </body>
