--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
             <input type="text" id="cityInput" placeholder="Enter City">
             <button onclick="searchWeather()">Search</button>
         </div>
+        <div class="search-box">
+            <input type="text" id="cityInput" placeholder="Enter City">
+            <button onclick="searchWeather2()">Search</button>
+        </div>
     </div>
     <div id="weatherData" class="weather-data"></div>
         </div>
     </div>
-
+    
     
     <script src="script.js"></script>
 </body>
